bin_PROGRAMS = test_ptrlist test_hashmap
test_ptrlist_SOURCES = run_test_ptrlist.c unittests_common.h
test_ptrlist_CPPFLAGS = -I$(top_srcdir)/include
test_ptrlist_LDADD = ../libsrsbsns/libsrsbsns.la

test_hashmap_SOURCES = run_test_hashmap.c unittests_common.h
test_hashmap_CPPFLAGS = -I$(top_srcdir)/include
test_hashmap_LDADD = ../libsrsbsns/libsrsbsns.la
