bin_PROGRAMS = test_ptrlist test_hashmap test_bintree test_deque test_deque test_heap
test_ptrlist_SOURCES = run_test_ptrlist.c unittests_common.h
test_ptrlist_CPPFLAGS = -I$(top_srcdir)/include
test_ptrlist_LDADD = ../libsrsbsns/libsrsbsns.la

test_hashmap_SOURCES = run_test_hashmap.c unittests_common.h
test_hashmap_CPPFLAGS = -I$(top_srcdir)/include
test_hashmap_LDADD = ../libsrsbsns/libsrsbsns.la

test_bintree_SOURCES = run_test_bintree.c unittests_common.h
test_bintree_CPPFLAGS = -I$(top_srcdir)/include
test_bintree_LDADD = ../libsrsbsns/libsrsbsns.la

test_deque_SOURCES = run_test_deque.c unittests_common.h
test_deque_CPPFLAGS = -I$(top_srcdir)/include
test_deque_LDADD = ../libsrsbsns/libsrsbsns.la

test_heap_SOURCES = run_test_heap.c unittests_common.h
test_heap_CPPFLAGS = -I$(top_srcdir)/include
test_heap_LDADD = ../libsrsbsns/libsrsbsns.la
